// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for filename 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.xxxx.js",
      "size": 1426,
      "type": "asset",
    },
    {
      "chunkNames": [],
      "chunks": [
        "dynamic_js",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "dynamic_js.xxxx.js",
      "size": 218,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.xxxx.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": false,
      "files": [
        "dynamic_js.xxxx.js",
      ],
      "id": "dynamic_js",
      "initial": false,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "dynamic_js",
          ],
          "id": "426",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
          "issuer": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "issuerId": "10",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "10",
              "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./dynamic.js",
          "reasons": [
            {
              "moduleId": "10",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
              "moduleName": "./index.js",
              "type": "dynamic import",
              "userRequest": "./dynamic",
            },
          ],
          "size": 32,
          "type": "module",
        },
      ],
      "names": [],
      "parents": [
        "main",
      ],
      "siblings": [],
      "size": 32,
      "type": "chunk",
    },
    {
      "children": [
        "dynamic_js",
      ],
      "entry": true,
      "files": [
        "main.xxxx.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 38,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 38,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 1426,
        },
      ],
      "assetsSize": 1426,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "382c54c013a30aa4",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 38,
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "dynamic_js",
      ],
      "id": "426",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./dynamic.js",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "moduleName": "./index.js",
          "type": "dynamic import",
          "userRequest": "./dynamic",
        },
      ],
      "size": 32,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 1426,
        },
      ],
      "assetsSize": 1426,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/filename/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for filename 2`] = `
"Hash: 382c54c013a30aa4
             Asset       Size      Chunks             Chunk Names
      main.xxxx.js   1.39 KiB        main  [emitted]  main
dynamic_js.xxxx.js  218 bytes  dynamic_js  [emitted]  
Entrypoint main = main.xxxx.js
chunk {dynamic_js} dynamic_js.xxxx.js 32 bytes
 [426] ./dynamic.js 32 bytes {dynamic_js}
     dynamic import ./dynamic [10]
chunk {main} main.xxxx.js (main) 38 bytes [entry]
 [10] ./index.js 38 bytes {main}
     entry ./index 
[10] ./index.js 38 bytes {main}
    entry ./index 
[426] ./dynamic.js 32 bytes {dynamic_js}
    dynamic import ./dynamic [10]"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 9101,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index.js",
            },
          ],
          "size": 25,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 25,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 9101,
        },
      ],
      "assetsSize": 9101,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "b50ba9ed7df3e351",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index.js",
        },
      ],
      "size": 25,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 9101,
        },
      ],
      "assetsSize": 9101,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/hot+production/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"Hash: b50ba9ed7df3e351
    Asset      Size  Chunks             Chunk Names
bundle.js  8.89 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 25 bytes [entry]
 [10] ./index.js 25 bytes {main}
     entry ./index.js 
[10] ./index.js 25 bytes {main}
    entry ./index.js "
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
      "title": "JavaScript parsing error",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
      "title": "JavaScript parsing error",
    },
  ],
  "errorsCount": 2,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

"
`;

exports[`StatsTestCases should print correct stats for legacy-ie-css-warning 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for legacy-ie-css-warning 2`] = `""`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:9
  │
1 │ const a {}
  │         ^ Expected a semicolon

",
      "message": "Expected a semicolon",
      "title": "JavaScript parsing error",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:9
  │
1 │ const a {}
  │         ^ Expected a semicolon

"
`;

exports[`StatsTestCases should print correct stats for named-chunk-group 1`] = `
{
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1401,
        },
      ],
      "assetsSize": 1401,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "namedChunkGroups": {
    "cimanyd": {
      "assets": [
        {
          "name": "cimanyd.bundle.js",
          "size": 215,
        },
      ],
      "assetsSize": 215,
      "chunks": [
        "cimanyd",
      ],
      "name": "cimanyd",
    },
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1401,
        },
      ],
      "assetsSize": 1401,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for named-chunk-group 2`] = `
"Entrypoint main = bundle.js
Chunk Group cimanyd = cimanyd.bundle.js"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

",
      "message": "Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "title": "Resolve error",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"
error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e1~runtime.js",
      ],
      "id": "e1~runtime",
      "initial": true,
      "names": [
        "e1~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e2~runtime.js",
      ],
      "id": "e2~runtime",
      "initial": true,
      "names": [
        "e2~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1~runtime.js",
          "size": 2058,
        },
        {
          "name": "e1.js",
          "size": 392,
        },
      ],
      "assetsSize": 2450,
      "chunks": [
        "e1~runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2~runtime.js",
          "size": 2058,
        },
        {
          "name": "e2.js",
          "size": 392,
        },
      ],
      "assetsSize": 2450,
      "chunks": [
        "e2~runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "e1~runtime.js",
          "size": 2058,
        },
        {
          "name": "e1.js",
          "size": 392,
        },
      ],
      "assetsSize": 2450,
      "chunks": [
        "e1~runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2~runtime.js",
          "size": 2058,
        },
        {
          "name": "e2.js",
          "size": 392,
        },
      ],
      "assetsSize": 2450,
      "chunks": [
        "e2~runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 2`] = `
"Entrypoint e1 = e1~runtime.js e1.js
Entrypoint e2 = e2~runtime.js e2.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e1~runtime} e1~runtime.js (e1~runtime) 0 bytes [initial]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {e2~runtime} e2~runtime.js (e2~runtime) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2058,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2058,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2058,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2058,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 2`] = `
"Entrypoint e1 = runtime~e1.js e1.js
Entrypoint e2 = runtime~e2.js e2.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {runtime~e1} runtime~e1.js (runtime~e1) 0 bytes [initial]
chunk {runtime~e2} runtime~e2.js (runtime~e2) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime.js",
      ],
      "id": "runtime",
      "initial": true,
      "names": [
        "runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2055,
        },
        {
          "name": "e1.js",
          "size": 389,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2055,
        },
        {
          "name": "e2.js",
          "size": 389,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2055,
        },
        {
          "name": "e1.js",
          "size": 389,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2055,
        },
        {
          "name": "e2.js",
          "size": 389,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 2`] = `
"Entrypoint e1 = runtime.js e1.js
Entrypoint e2 = runtime.js e2.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {runtime} runtime.js (runtime) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2058,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2058,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2058,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2058,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2444,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 2`] = `
"Entrypoint e1 = runtime~e1.js e1.js
Entrypoint e2 = runtime~e2.js e2.js
chunk {e1} e1.js (e1) 27 bytes [entry]
chunk {e2} e2.js (e2) 27 bytes [entry]
chunk {runtime~e1} runtime~e1.js (runtime~e1) 0 bytes [initial]
chunk {runtime~e2} runtime~e2.js (runtime~e2) 0 bytes [initial]"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

",
      "message": "Expected ';', '}' or <eof>",
      "title": "JavaScript parsing error",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

"
`;

exports[`StatsTestCases should print correct stats for reasons 1`] = `
{
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "847",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/reasons/a.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./a.js",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
          "moduleName": "./index.js",
          "type": "cjs require",
          "userRequest": "./a",
        },
      ],
      "size": 55,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 44,
      "type": "module",
    },
  ],
}
`;

exports[`StatsTestCases should print correct stats for reasons 2`] = `
"[847] ./a.js 55 bytes {main}
    cjs require ./a [10]
[10] ./index.js 44 bytes {main}
    entry ./index "
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 365,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 51,
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "193",
          "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a",
          "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "issuerId": "10",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "10",
              "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing)",
          "reasons": [
            {
              "moduleId": "10",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
              "moduleName": "./index.js",
              "type": "esm import",
              "userRequest": "cycle-alias/a",
            },
          ],
          "size": 160,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 211,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 365,
        },
      ],
      "assetsSize": 365,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

",
      "message": "Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias",
      "title": "Resolve error",
    },
  ],
  "errorsCount": 1,
  "hash": "96843041aec37d26",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 51,
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "193",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing)",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "moduleName": "./index.js",
          "type": "esm import",
          "userRequest": "cycle-alias/a",
        },
      ],
      "size": 160,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 365,
        },
      ],
      "assetsSize": 365,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 2`] = `
"Hash: 96843041aec37d26
PublicPath: auto
    Asset       Size  Chunks             Chunk Names
bundle.js  365 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 211 bytes [entry]
 [10] ./index.js 51 bytes {main}
     entry ./index 
 [193] <PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing) 160 bytes {main}
     esm import cycle-alias/a [10]
[10] ./index.js 51 bytes {main}
    entry ./index 
[193] <PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing) 160 bytes {main}
    esm import cycle-alias/a [10]

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 974,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 39,
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "481",
          "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a",
          "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "issuerId": "10",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "10",
              "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing)",
          "reasons": [
            {
              "moduleId": "10",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
              "moduleName": "./index.js",
              "type": "esm import",
              "userRequest": "pkg-a",
            },
          ],
          "size": 160,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 199,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 974,
        },
      ],
      "assetsSize": 974,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "Export should be relative path and start with "./", but got ../../index.js
",
      "message": "Export should be relative path and start with "./", but got ../../index.js",
      "title": "",
    },
  ],
  "errorsCount": 1,
  "hash": "35d11ac4c0a84831",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 39,
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "481",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing)",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "moduleName": "./index.js",
          "type": "esm import",
          "userRequest": "pkg-a",
        },
      ],
      "size": 160,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 974,
        },
      ],
      "assetsSize": 974,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 2`] = `
"Hash: 35d11ac4c0a84831
    Asset       Size  Chunks             Chunk Names
bundle.js  974 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 199 bytes [entry]
 [10] ./index.js 39 bytes {main}
     entry ./index 
 [481] <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing) 160 bytes {main}
     esm import pkg-a [10]
[10] ./index.js 39 bytes {main}
    entry ./index 
[481] <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing) 160 bytes {main}
    esm import pkg-a [10]

Export should be relative path and start with "./", but got ../../index.js
"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 319,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 26,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 26,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 319,
        },
      ],
      "assetsSize": 319,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "c1603650c938e434",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 26,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 319,
        },
      ],
      "assetsSize": 319,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/simple/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"Hash: c1603650c938e434
    Asset       Size  Chunks             Chunk Names
bundle.js  319 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 26 bytes [entry]
 [10] ./index.js 26 bytes {main}
     entry ./index 
[10] ./index.js 26 bytes {main}
    entry ./index "
`;
